Created service with alarm manager. Used this as example: https://guides.codepath.com/android/Starting-Background-Services#using-with-alarmmanager-for-periodic-tasks

--- a/Android/udpSocket/app/src/main/res/values/strings.xml
+++ b/Android/udpSocket/app/src/main/res/values/strings.xml
@@ -11,4 +11,7 @@
     <string name="default_ip">192.168.56.1</string>
     <string name="edit_address">Enter server ip adrress</string>
 
+    <string name="start_service">Start Service</string>
+    <string name="stop_service">Stop Service</string>
+
 </resources>
