--- a/Android/udpSocket/app/src/main/res/values/strings.xml
+++ b/Android/udpSocket/app/src/main/res/values/strings.xml
@@ -3,15 +3,20 @@
 
     <string name="app_name">UdpSocket</string>
     <string name="action_settings">Settings</string>
-    <string name="edit_port">Enter server port</string>
     <string name="edit_message">Enter a message</string>
     <string name="button_send">Send</string>
     <string name="title_activity_display_message">My Message</string>
-    <string name="hello_world">Hello world!</string>
-    <string name="default_ip">192.168.56.1</string>
+
+
+    <string name="default_ip">192.168.1.101</string>
     <string name="edit_address">Enter server ip adrress</string>
+
+    <string name="default_port">12345</string>
+    <string name="edit_port">Enter server port</string>
 
     <string name="start_service">Start Service</string>
     <string name="stop_service">Stop Service</string>
+
+    <string name="date_format"></string>
 
 </resources>
