--- a/Android/udpSocket/app/src/main/res/values/strings.xml
+++ b/Android/udpSocket/app/src/main/res/values/strings.xml
@@ -6,17 +6,20 @@
     <string name="edit_message">Enter a message</string>
     <string name="button_send">Send</string>
     <string name="title_activity_display_message">My Message</string>
-
-
     <string name="default_ip">192.168.1.101</string>
     <string name="edit_address">Enter server ip adrress</string>
-
     <string name="default_port">12345</string>
     <string name="edit_port">Enter server port</string>
-
     <string name="start_service">Start Service</string>
     <string name="stop_service">Stop Service</string>
-
     <string name="date_format"></string>
+    <string name="title_activity_login">LoginActivity</string>
+    <string name="hello_world">Hello world!</string>
+
+    <string name="username_placeholder">Username</string>
+    <string name="password_placeholder">Password</string>
+    <string name="button_login">Login</string>
+
+    <string name="tix_base_url">http://tix.innova-red.net:8080</string>
 
 </resources>
