--- a/Android/udpSocket/app/src/main/res/values/strings.xml
+++ b/Android/udpSocket/app/src/main/res/values/strings.xml
@@ -14,13 +14,22 @@
     <string name="stop_service">Stop Service</string>
     <string name="date_format"></string>
 
-    <string name="title_activity_login">LoginActivity</string>
-    <string name="title_activity_create">CreateActivity</string>
+    <string name="title_activity_login">Login</string>
+    <string name="title_activity_create">Create Account</string>
+    <string name="title_activity_installations">Installations</string>
 
     <string name="username_placeholder">Email</string>
     <string name="password_placeholder">Contraseña</string>
     <string name="repeat_password_placeholder">Repetir Contraseña</string>
     <string name="button_login">Login</string>
     <string name="button_create_account">Create Account</string>
+
+    <string name="new_installation_label">
+        Seleccione un nombre para la nueva instalacion:
+    </string>
+
+    <string name="current_installations_label">
+        Instalaciones actuales:
+    </string>
 
 </resources>
