--- a/Android/udpSocket/app/src/main/res/values/strings.xml
+++ b/Android/udpSocket/app/src/main/res/values/strings.xml
@@ -3,7 +3,9 @@
 
     <string name="app_name">TiX</string>
     <string name="action_settings">Settings</string>
-    <string name="edit_message">Enter a message</string>
+    <string name="edit_message">TestInstallation</string>
+    <string name="edit_message_hint">Enter a message</string>
+
     <string name="button_send">Send</string>
     <string name="title_activity_display_message">My Message</string>
     <string name="default_ip">10.0.3.2</string>
