--- a/Android/udpSocket/app/src/main/res/values/strings.xml
+++ b/Android/udpSocket/app/src/main/res/values/strings.xml
@@ -19,27 +19,26 @@
     -->
 
     <string name="title_activity_login">Login</string>
-    <string name="title_activity_create">Crear Cuenta</string>
-    <string name="title_activity_installations">Instalaciones</string>
-    <string name="title_current_installations">Instalacion actual</string>
+    <string name="title_activity_installations">Installations</string>
+    <string name="title_current_installations">Current installation</string>
 
     <string name="username_placeholder">Email</string>
-    <string name="password_placeholder">Contraseña</string>
-    <string name="repeat_password_placeholder">Repetir Contraseña</string>
+    <string name="password_placeholder">Password</string>
+    <string name="repeat_password_placeholder">Repeat Password</string>
     <string name="button_login">Login</string>
-    <string name="button_create_account">Crear Cuenta</string>
+    <string name="button_create_account">Create Account</string>
 
-    <string name="button_create_installation">Crear Instalación</string>
-    <string name="new_installation_label">Seleccione un nombre para la nueva instalacion:</string>
+    <string name="button_create_installation">Create Installation</string>
+    <string name="new_installation_label">Select a name for the new installation:</string>
 
-    <string name="new_installation_hint">Instalacion</string>
+    <string name="new_installation_hint">Installation</string>
 
     <string name="button_stop_service">Stop service</string>
     <string name="button_start_service">Start service</string>
 
+    <string name="button_delete_installation">Delete installation</string>
 
-    <string name="current_installations_label">
-        Instalaciones actuales:
-    </string>
+    <string name="current_installations_label">Current Installations:</string>
+    <string name="current_installation_label">Current Installation:</string>
 
 </resources>
